--- a/src/app/calendar/timesheet/timesheet.component.html
+++ b/src/app/calendar/timesheet/timesheet.component.html
@@ -8,7 +8,7 @@
               <p class="na-p">Your ToDo List Diary</p>
             </div>
             <div class="col-md-4 text-left">
-              <p class="clrs-h4 text-center"><span id="thrs">{{ nHrs }}</span>:<span id="tmins">{{ nMin }}</span></p>
+                <p class="clrs-h4 text-center"><span id="thrs">{{ nHrs }} </span>: <span id="tmins">{{ nMin }} </span>: <span>{{ nSecs }}</span></p>
             </div>
             <div class="col-md-4 text-right">Today`s Overview</div>
           </div>
@@ -21,16 +21,10 @@
           </p><br>
           <div id="accordionActionData" role="tablist" aria-multiselectable="true" class="card-collapse">
             <ol style="padding-left: 0px;">
-              <li class="" style="color:steelblue" *ngFor="let item of myActionItems">
+              <li class="" style="color:steelblue" *ngFor="let item of myDiaryItems">
                 <div class="card card-plain" *ngIf="item.champion.id == userId; else showNonChampField">
                   <div class="card-header" role="tab" id="heading2">
                     <a class="collapsed row col-md-12" data-toggle="collapse" href="#{{ item.id }}" (click)="selectAction(item)" aria-expanded="false" aria-current="false">
-                      <!-- <span class="label text-info" style="width: 5em;"><small>{{ item.name }}</small></span> -->
-                      <!-- <span class="label text-info" style="width: 5em;">{{ item.name }}</span>
-                      <span style="width: 12em;" class="pull-right"><small *ngIf="item.targetQty">Target 
-                        <span class="label text-warning">{{ item.targetQty }} {{ item.unit }}</span></small>
-                        <i class="nc-icon nc-minimal-down"></i>
-                      </span> -->
                       <span class="label text-info card-category" style="width: 20em;">{{ item.name }}
                         <span style="width: 10em;" class="pull-right"><small *ngIf="item.targetQty">Target
                             <span class="label text-warning">{{ item.targetQty }} {{ item.unit }}</span></small>
@@ -42,14 +36,12 @@
                   <div id="{{ item.id }}" class="collapse" data-parent="#accordionActionData" role="tabpanel" aria-labelledby="heading2">
                     <div class="card-body">
                       <div class="row">
-                        <!-- <div for="" class="col-sm-5 card-category">Measurement</div> -->
                         <div class="col-sm-9">
                           <p class="category text-left" style="margin-bottom: 0px;">Enter Actual Measurements </p>
                           <div class="form-group">
                             <div class="input-group" [ngClass]="{'input-group-focus':focus===true}">
                               <input type="number" class="form-control panel-boader" [(ngModel)]="dmData.qty" style=" padding-left: 10px; padding-right: 10px; height:2em"
-                                placeholder="Enter Data" /><!-- clrs-cell  -->
-                                
+                                placeholder="Enter Data"/>
                               <div class="input-group-postpend">
                                 <span class="input-group-text" style=" padding-left: 10px; padding-right: 10px; height:28px">
                                   <small>{{ item.unit }}</small>
@@ -59,7 +51,6 @@
                           </div>
                         </div>
                         <div class="col-sm-2 card-category">
-                          <!-- <button class="btn-link btn-round primary" (click)="saveActual(actualData)" style="margin-top: 11px"> -->
                           <button class="btn-link btn-round primary" (click)="saveActual(dmData)" style="margin-top: 11px">
                             <small> Save </small>
                           </button>
