--- a/src/app/projects/view/view.component.html
+++ b/src/app/projects/view/view.component.html
@@ -2137,7 +2137,7 @@
                                     <small>
                                       <button class="primary btn-link" data-toggle="modal"
                                         (click)="selectEditAction(item)" data-target="#editAction">
-                                        Period
+                                        Add date
                                       </button>
                                       <button class="primary btn-link" data-toggle="modal"
                                         (click)="selectEditAction(item);showActionParticipants()"
