--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,27 +1,5 @@
 
-<!-- <script>
-  function countDown(secs, elem) {
-    var element = document.getElementById(elem);
-    element.innerHTML = "Please wait for " + secs + " seconds";
-    if (secs < 1) {
-      clearTimeout(timer);
-      element.innerHTML = '<h2>Countdown Complete!</h2>';
-      element.innerHTML += '<a href="#">Click here now</a>';
-    }
-    secs--;
-    var timer = setTimeout('countDown(' + secs + ',"' + elem + '")', 1000);
-  }
-</script> -->
 <div class="main-content">
-  <!-- <div class="row">
-    <div class="card">
-      <div><h4>{{ cdTimer }}</h4></div>
-      <script>
-        countDown(10, "status");
-        countDownPopup(10);
-      </script>
-    </div>
-  </div> -->
   <div class="row">
     <div class="col-lg-4 col-sm-6">
       <div class="card">
@@ -40,15 +18,6 @@
               <div class="content container scroll-em" *ngIf="showActions">
                 <ol>
                   <li class="col-xs-12 ml-auto mr-auto" style="color:steelblue" *ngFor="let item of myActionItems">
-                    <!-- <a style="color:slategray">{{ item.name }}</a> -->
-
-                    
-                    <!-- <span class="row col-md-12">
-                      <span class="col-md-9 col-10" style="padding-left: 0px; padding-right: 0px;">{{ item.name }}</span>
-                      <span> @ <span class="col-md-3 mr-auto text-warning"> {{ item.start }} hrs </span></span>
-                    </span><br> -->
-
-
                     <div class="row">
                       <a class="col-md-12" style="color:steelblue">
                         <span class="col-md-8" style="width:24em;">{{ item.name }} </span> <!-- class="col-md-9 col-10" -->
@@ -180,7 +149,6 @@
                 </div>
               </li>
             </ol> -->
-         
             <div class="content container scroll-em">
               <ol>
                 <li class="col-xs-12 ml-auto mr-auto" style="color:steelblue" *ngFor="let project of allMyProjects | async"><a
@@ -188,7 +156,6 @@
                 </li>
               </ol>
             </div>
-         
           </div>
         </div>
         <div class="card-body">
@@ -324,8 +291,8 @@
         </div>
         <div class="card" data-background-color="blue">
           <marquee>
-            <a *ngFor="let project of allColoursProjects | async" style="color:rgb(35, 41, 49)" routerLink="#">A
-              project has been created in {{project.location}}. . . . . . . <span class="spacer" style="widows: 10px;"></span></a> <!--  in {{project.sector}}  -->
+            <a *ngFor="let project of allColoursProjects | async" style="color:rgb(35, 41, 49)" routerLink="#">
+              A project has been created, location: {{ project.location }}, type: {{ project.sector }}. . . . . . . <span class="spacer" style="widows: 10px;"></span></a> <!--  in {{project.sector}}  -->
           </marquee>
         </div>
       </div>
