--- a/src/app/company/enterprise-profile/enterprise-profile.component.html
+++ b/src/app/company/enterprise-profile/enterprise-profile.component.html
@@ -3135,7 +3135,7 @@
                     </div>
                   </div> -->
                 </div>
-                <div class="tab-pane" id="test">
+                <!-- <div class="tab-pane" id="test">
                   <div class="col-md-12">
                     <div class="card">
                       <div class="card-body">
@@ -3184,7 +3184,7 @@
                       </div>
                     </div>
                   </div>
-                </div>
+                </div> -->
                 <div class="tab-pane" id="request">
                   <div class="col-md-12">
                     <div class="card">
